Remove navbar padding to fix responsive overflow issues

--- a/main/static/biostar.less.css
+++ b/main/static/biostar.less.css
@@ -409,8 +409,8 @@ div.post-show {
 }
 
 .navbar-inner {
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 0px;
+  padding-right: 0px;
   background-color: red;
   background-image: -moz-linear-gradient(top, @navbar-color, @navbar-color-darker);
   background-image: -ms-linear-gradient(top, @navbar-color, @navbar-color-darker);
